fix(portal): fix overlap with menu on portal hero page
affects: @fremtind/portal

--- a/portal/src/pages/style.scss
+++ b/portal/src/pages/style.scss
@@ -6,7 +6,7 @@ $webfonts-dir: "../../static/fonts";
 @import "~@fremtind/jkl-webfonts/webfonts.scss";
 
 $hero-size: rem(700px);
-$hero-top-offset: rem(225px);
+$hero-top-offset: rem(0px);
 
 $content-bg-color: $varm-fjellgra;
 $content-color: $snohvit;
@@ -20,13 +20,14 @@ $circle-size: rem(100px);
     &__background {
         @include position(absolute !important, $top: 0, $left: 0);
         z-index: -1;
-        width: 100%;
-        height: 100%;
+        min-width: 100%;
+        height: 100vh;
     }
+
     &__hero {
-        @include position(absolute, $top: $hero-top-offset, $left: 0);
+        @include position(relative, $top: $hero-top-offset, $left: 0);
         max-width: $hero-size;
-        padding: $layout-spacing--small $layout-spacing--medium;
+        padding: $layout-spacing--large $layout-spacing--medium;
         margin: 0 $layout-spacing--large;
         background-color: rgba($snohvit, 0.7);
         @include small-device {
@@ -36,7 +37,16 @@ $circle-size: rem(100px);
             box-sizing: border-box;
             padding: $layout-spacing--small $layout-spacing--small $layout-spacing--large $layout-spacing--small;
         }
+
+        & > * + * {
+            margin-top: $layout-spacing--medium;
+        }
+
+        & > *:last-child {
+            margin-bottom: 0;
+        }
     }
+
     &__content {
         @include position(absolute, $top: 100vh, $left: 0, $right: 0);
         background-color: $content-bg-color;
